--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-docopt
-matplotlib
-nose
-pdfminer
-pyexcel-xlsx
-Pillow
-PyPDF2
-Sphinx
+docopt==0.6.2
+matplotlib==2.2.3
+nose==1.3.7
+pdfminer==20140328
+pyexcel-xlsx==0.5.6
+Pillow==5.2.0
+PyPDF2==1.26.0
+Sphinx==1.8.0b1
