--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,3 @@
-click==6.7
-matplotlib==2.2.3
-numpy==1.13.3
-opencv-python==3.4.2.17
-pandas==0.23.4
-pdfminer==20140328
-Pillow==5.2.0
-PyPDF2==1.26.0
 pytest==3.8.0
 pytest-runner==4.2
-Sphinx==1.8.0b1
+Sphinx==1.7.9
