--- a/setup.cfg
+++ b/setup.cfg
@@ -2,5 +2,5 @@
 test=pytest
 
 [tool:pytest]
-addopts = --verbose
+addopts = --verbose --cov-config .coveragerc --cov-report term --cov-report xml --cov=camelot tests
 python_files = tests/test_*.py
