--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,13 @@ language: python
 cache: pip
 python:
   - "2.7"
-  - "3.4"
   - "3.5"
   - "3.6"
-  - "3.7"
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
 before_install:
   - sudo apt-get install python-tk python3-tk ghostscript
 install:
