Run codecov only once

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,16 @@ cache: pip
 python:
   - "2.7"
   - "3.5"
-  - "3.6"
 matrix:
   include:
     - python: 3.7
       dist: xenial
       sudo: true
+    - python: 3.6
+      script: pytest --verbose --cov-config .coveragerc --cov-report term --cov-report xml --cov=camelot tests && codecov --verbose
 before_install:
   - sudo apt-get install python-tk python3-tk ghostscript
 install:
   - pip install ".[dev]"
 script:
   - pytest --verbose --cov-config .coveragerc --cov-report term --cov-report xml --cov=camelot tests
-after_success:
-  - codecov --verbose
