--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,6 @@ jobs:
       sudo: true     
     - stage: coverage
       python: 3.6
-      script: make test && codecov --verbose
+      script: 
+        - make test
+        - codecov --verbose
