--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
       python: '3.7'
       dist: xenial
     - stage: coverage
-      python: 3.6
+      python: '3.6'
       script:
         - make test
         - codecov --verbose
